<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ProfileActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:background="#306D5B5B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/test_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_photo_text"
                    android:textSize="18sp"
                    android:layout_marginBottom="20sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_title"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_name"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"/>


        </LinearLayout>

        <View
                android:background="#306D5B5B"
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_name"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_track"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"/>


        </LinearLayout>

        <View
                android:background="#306D5B5B"
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_title"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_country"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"/>


        </LinearLayout>

        <View
                android:background="#306D5B5B"
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_email"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"/>


        </LinearLayout>

        <View
                android:background="#306D5B5B"
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_title"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_phone_number"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"/>


        </LinearLayout>

        <View
                android:background="#306D5B5B"
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slack_username_title"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_slack_username"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>
